# DefaultBotTemplate

./: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
locales/: en.yml  ru.yml
src/bot/: bot.dockerfile  pyproject.toml
src/bot/app/: misc.py  run_bot.py
src/bot/app/bot/handlers/: __init__.py  admin.py  menu.py  start.py
src/bot/app/bot/handlers/callbackdata/: menu.py
src/bot/app/bot/handlers/keyboards/: admin.py  menu.py
src/bot/app/bot/handlers/states/: menu.py
src/bot/app/bot/middlewares/: big_bro.py
src/bot/app/models/: users.py
src/bot/app/utils/excel/: export.py
src/web/: pyproject.toml
src/web/admin_web/admin_models/: UsersAdmin.py
src/web/admin_web/models/: users.py
