[tool.poetry]
name = "defaultbottemplate"
version = "0.1.0"
description = ""
authors = ["arthu <arthur_air@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0b1"
loguru = "^0.7.0"
sqlalchemy = "^2.0.15"
asyncpg = "^0.27.0"
pyyaml = "^6.0"
pydantic = "^1.10.8"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
